--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/wrainaud/liri-node-app.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Created by William Rainaud - email: wrainaud@outlook.com - web: http://wrainaud.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wrainaud/liri-node-app/issues"
