--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "liri-node-app",
   "version": "1.0.0",
   "description": "Liri Node App",
-  "main": "keys.js",
+  "main": "liri.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,7 +22,7 @@
     "inquirer": "^3.3.0",
     "moment": "^2.18.1",
     "node-spotify-api": "^1.0.7",
-    "nuevo-llaves-rcbc": "^1.3.0",
+    "nuevo-llaves-rcbc": "^1.4.0",
     "request": "^2.83.0",
     "require": "^2.4.20",
     "twitter": "^1.7.1"
